--- a/codegrader/src/styles.css
+++ b/codegrader/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'tailwindcss';
+@import 'primeicons/primeicons.css';
 /* styles.css (global) */
 html {
   scrollbar-gutter: stable; /* luôn chừa chỗ cho thanh cuộn dọc */
