--- a/codegrader/src/app/features/admin/userManage/userManage.html
+++ b/codegrader/src/app/features/admin/userManage/userManage.html
@@ -1,6 +1,6 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
 
-<div class="container">
+<!-- <div class="container">
   <admin-sidebar [activeRoute]="'/manageuser'" (navItemClick)="onNavItemClick($event)"></admin-sidebar>
 
   <div class="section2">
@@ -58,7 +58,7 @@
 
     <div class="copyright">©Copyright By CodeGrader 2025</div>
   </div>
-</div>
+</div> -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
 <div class="container">
   <admin-sidebar [activeRoute]="'/manageuser'" (navItemClick)="onNavItemClick($event)"></admin-sidebar>
