update admin view and auth

--- a/codegrader/src/app/auth/forgotPassword/forgotPassword.html
+++ b/codegrader/src/app/auth/forgotPassword/forgotPassword.html
@@ -59,18 +59,18 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content p-3">
       <div class="modal-header">
-        <h5 class="modal-title">Xác thực OTP</h5>
+        <h5 class="modal-title">OTP Authentication</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body">
         <p>
-          Mã OTP đã được gửi tới email: <b>{{ email() }}</b>
+          OTP code has been sent to email: <b>{{ email() }}</b>
         </p>
 
         <input
           type="text"
           class="form-control mb-3"
-          placeholder="Nhập OTP"
+          placeholder="Enter OTP"
           [ngModel]="otp()"
           (ngModelChange)="otp.set($event)"
           name="otp"
@@ -87,7 +87,7 @@
           <input
             [type]="showPassword() ? 'text' : 'password'"
             class="password-input"
-            placeholder="Mật khẩu mới"
+            placeholder="New Password"
             [ngModel]="newPassword()"
             (ngModelChange)="newPassword.set($event)"
             name="newPassword"
@@ -166,13 +166,13 @@
 
       </div>
       <div class="modal-footer">
-        <button class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
+        <button class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
         <button 
           class="btn btn-primary" 
           (click)="onConfirmOtp()"
           [disabled]="!isFormValid()"
         >
-          Xác nhận
+          Confirm
         </button>
       </div>
     </div>
